# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  flake.nix  setup.cfg  setup.py
hooks/: clang-format.py  clang_format.py  clang_tidy.py  commands.py  error.py  nixpkgs-fmt.py  nixpkgs_fmt.py  shell-check.py  shell_check.py
