[metadata]
name = pre-commit-hooks
version = 1.0.0
description = A collection of my most used pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/d4ilyrun/pre-commit-hooks
author = Léo DUBOIN
author_email = leo@duboin.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    clang-format-hook = hooks.clang-format:main
    clang-tidy-hook = hooks.clang-tidy:main
    shell-check-hook = hooks.shell-check:main
    nixpkgs-fmt-hook = hooks.nixpkgs-fmt:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
